{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Touch",
            "id": "7c88b09b-7cbe-4e78-a155-38e77da7d887",
            "actions": [
                {
                    "name": "TouchContact",
                    "type": "Button",
                    "id": "65ae490b-9eb4-406f-8e81-4007cae5f92a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "b7c890ac-0457-4093-80a4-3e3e151dff52",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ae4bf115-7cb7-46f5-9434-b9e539590dde",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f550635a-6a8f-454a-b20a-94a5eb12136c",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}